# klajster

./: .gitignore  .gitmodules  README.md  dvc.yaml  example_run.sh  pyproject.toml  requirements.txt  setup_envs.sh
.github/workflows/: python_poetry.yml  python_poetry_main.yml
data/datasets/: .gitignore
examples/: job.sh  train.py  train_lightning.py
examples/torch/: README.md  model.py
experiments/configs/datasets/: polemo2.yaml
experiments/configs/eval/polemo2/: allegro__herbert-base-cased.yaml  allegro__herbert-large-cased.yaml
experiments/scripts/: evaluate_lightning_classification.py  optimize_lightning_classification.py  preprocess_dataset.py
klajster/: paths.py  utils.py
